Fix masonry layout being quite broken in some browsers

--- a/scss/_journals.scss
+++ b/scss/_journals.scss
@@ -59,8 +59,15 @@
     overflow: hidden;
     line-height: 1.4em;
     margin-bottom: 1em;
+    br {
+      display: none;
+    }
     p {
       margin: 0;
+      display: none;
+      &:first-child {
+        display: block;
+      }
     }
     img {
       display: none;
